# spytfy

./: .gitignore  LICENSE  README.md  package.json
.planning/: ANDROID-PLAN-PATCH.md  ANDROID-PLAN-REVIEW.md  PROJECT.md  (+5 more)
spytfy/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
spytfy/src-tauri/capabilities/: default.json
spytfy/src-tauri/migrations/: 001_initial.sql  002_add_cover_url.sql  003_add_track_number.sql  004_add_candidates.sql
spytfy/src-tauri/src/: db.rs  lib.rs  main.rs  platform.rs
spytfy/src-tauri/src/commands/: settings.rs
spytfy/src-tauri/src/download/: android.rs  cover.rs  downloader.rs  mod.rs  pipeline.rs  scorer.rs  tagger.rs  verifier.rs  youtube.rs
spytfy/src-tauri/src/ocr/: browser.rs  commands.rs  engine.rs  html_parser.rs  mod.rs  parser.rs
spytfy/src-tauri/src/queue/: commands.rs  manager.rs  mod.rs  worker.rs
spytfy/src-tauri/src/spotify/: auth.rs  mod.rs  parser.rs  resolver.rs  scraper.rs  types.rs
spytfy/src-tauri/tauri-plugin-spytfy-download/: Cargo.toml  build.rs
spytfy/src-tauri/tauri-plugin-spytfy-download/android/: build.gradle.kts
spytfy/src-tauri/tauri-plugin-spytfy-download/android/src/main/java/app/tauri/spytfy_download/: DownloadPlugin.kt
spytfy/src-tauri/tauri-plugin-spytfy-download/permissions/autogenerated/: reference.md
spytfy/src-tauri/tauri-plugin-spytfy-download/permissions/autogenerated/commands/: download_audio.toml  search_youtube.toml
spytfy/src-tauri/tauri-plugin-spytfy-download/permissions/schemas/: schema.json
spytfy/src-tauri/tauri-plugin-spytfy-download/src/: lib.rs
(+52 files in other folders)
