[package]
name = "spytfy-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rspotify = { version = "0.13", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
regex = "1"
futures = "0.3"
strsim = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
id3 = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[lib]
name = "spytfy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
